fix dropdown outside click & items layout bug

--- a/src/component/UI/DropDown/DropDown.scss
+++ b/src/component/UI/DropDown/DropDown.scss
@@ -13,7 +13,6 @@
   }
   .dropdown-item {
     display: flex;
-    justify-content: flex-end;
     padding: 0.5rem 0.75rem 0.5rem 3rem;
     font-size: 0.8rem;
   }
